deploy/forgejo/forgejo/templates/gitea/deployment.yaml
---
# Source: forgejo/templates/gitea/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo
  namespace: "forgejo"
  annotations:
  labels:
    helm.sh/chart: forgejo-10.0.1
    app: forgejo
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/version: "9.0.1"
    version: "9.0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: forgejo
      app.kubernetes.io/instance: forgejo
  template:
    metadata:
      annotations:
        checksum/config: ae29278c2f18b920090950e90caafe33ea4a65bf12e3562e7d9de8e986204df2
      labels:
        helm.sh/chart: forgejo-10.0.1
        app: forgejo
        app.kubernetes.io/name: forgejo
        app.kubernetes.io/instance: forgejo
        app.kubernetes.io/version: "9.0.1"
        version: "9.0.1"
        app.kubernetes.io/managed-by: Helm
    spec:
      
      securityContext:
        fsGroup: 1000
      terminationGracePeriodSeconds: 60
      containers:
        - name: forgejo
          image: "code.forgejo.org/forgejo/forgejo:9.0.1-rootless"
          imagePullPolicy: IfNotPresent
          ports:
            - name: ssh
              containerPort: 2222
            - name: http
              containerPort: 3000
          livenessProbe:
            failureThreshold: 10
            initialDelaySeconds: 200
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          resources:
            {}
          securityContext:
            {}
          volumeMounts:
            - name: temp
              mountPath: /tmp
            - name: data
              mountPath: /data
            
      volumes:
        - name: init
          secret:
            secretName: forgejo-init
            defaultMode: 110
        - name: config
          secret:
            secretName: forgejo
            defaultMode: 110
        - name: inline-config-sources
          secret:
            secretName: forgejo-inline-config
        - name: temp
          emptyDir: {}
        - name: data
          persistentVolumeClaim:
            claimName: forgejo-storage
