deploy/forgejo/forgejo/templates/gitea/http-svc.yaml
---
# Source: forgejo/templates/gitea/http-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-http
  namespace: "forgejo"
  labels:
    helm.sh/chart: forgejo-10.0.1
    app: forgejo
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/version: "9.0.1"
    version: "9.0.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    {}
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: http
    port: 3000
    targetPort: 
  selector:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/instance: forgejo
